# DiscriminativePatches

./: README.md
code/: CMakeLists.txt  Doxyfile
code/src/: CatalogueDetection.cpp  CatalogueDetection.h  Configuration.cpp  Configuration.h  Constants.h  UDoMLDP.cpp  UDoMLDP.h  _SourceFiles.cmake  config.ini  main.cpp
code/src/IO/: IOUtils.cpp  IOUtils.h  _SourceFiles.cmake
code/src/configuration/: Configuration.cpp  Configuration.h  Constants.h  _SourceFiles.cmake
code/src/data/: DataSet.cpp  DataSet.h  GenerateTestData.cpp  GenerateTestData.h  TrainingData.cpp  TrainingData.h  _SourceFiles.cmake
code/src/featureExtraction/: _SourceFiles.cmake  cvHOG.cpp  cvHOG.h  umHOG.cpp  umHOG.h  umPCA.cpp  umPCA.h
code/src/imageCatalog/: CatalogClassificationSVM.cpp  CatalogClassificationSVM.h  CatalogTraining.cpp  CatalogTraining.h  PredictionResults.cpp  PredictionResults.h  _SourceFiles.cmake
code/src/imageCataloge/: CatalogeClassificationSVM.cpp  CatalogeClassificationSVM.h  CatalogeTraining.cpp  CatalogeTraining.h  _SourceFiles.cmake
code/src/kmeans/: _SourceFiles.cmake  umKmeans.cpp  umKmeans.h
code/src/svm/: CatalogueTraining.cpp  CatalogueTraining.h  ClassificationSVM.cpp  ClassificationSVM.h  _SourceFiles.cmake  svmtest.cpp  svmtest.h  umSVM.cpp  umSVM.h  umSVM.h~
code/src/utils/: FaceDetection.cpp  FaceDetection.h  ImageDisplayUtils.cpp  ImageDisplayUtils.h  ImageUtils.cpp  ImageUtils.h  _SourceFiles.cmake  facedetection.cpp  facedetection.h
presentations/period1/: MAI_Project1_Group4 final.ppt  MAI_Project1_Group4.odp  MAI_Project1_Group4.ppt  MAI_Project1_Group4_stefan.ppt  template.potx
presentations/period2/: MAI_Project1_Group4_p2.ppt
presentations/period2/tex/: beamerthemelankton-keynote.sty  main.aux  main.fls  (+3 more)
presentations/period3/: MAI_Project1_Group4.ppt
report/: giannis.tex  maip4.bib  references.bib  report.tex
report/final/: report.tex
report/salil/: manual_patches.tex
(+16 files in other folders)
